[package]
authors = ["Scott Minor <minor@minorhacks.com>"]
edition = "2018"
name = "advent_2020"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
scan_fmt = "0.2.5"
thiserror = "1.0.22"
